--- a/css/style.css
+++ b/css/style.css
@@ -183,7 +183,7 @@ header .container-h {
 
 /* sessao banner principal */
 .main-banner {
-  background: url(../img/main-banner.png) no-repeat center center fixed;
+  background: url(../img/main-banner.png) no-repeat center center;
   background-size: cover;
   padding: 200px 0;
   text-align: center;
